# software-engineering

./: .gitignore  Excel_I_exercise.xlsx  Web_scraping.ipynb  pyproject.toml
Data Science & Machine Learning/1 - Data Analytics/: 1. Numpy.ipynb  2. Pandas Aggregations.ipynb  4. Univariate analysis.ipynb  4.1 Bivariate analysis.ipynb
Data Science & Machine Learning/1 - Exploratory Data Analysis/: 2. Pandas Aggregations.ipynb
Data Science & Machine Learning/2 - Statistics & Probability/: 1. Fundamental Statistics & Probability for Computer-Based Systems.ipynb  2. Hypothesis Testing.ipynb
Data Science & Machine Learning/3 - Machine Learning/: 1. Regression.ipynb  2. Classification.ipynb  3. Unsupervised Learning.ipynb  4. Ensamble Learning.ipynb  Evaluation Metrics.ipynb  ML - Learning.ipynb
Data Science & Machine Learning/4 - Deep Learning & Computer Vision/: 1. Deep Learning.ipynb  2. Gradient Descent.ipynb  3. CNNs.ipynb  4. Transfer Learning.ipynb
Data Science & Machine Learning/SLIDES/: 1. EDA.pptx  11. Hyperparameters & pipelines.pptx  14. Deep Learning.pptx  15. Transfer Learning.md  16. CNNs.pptx  17. Transfer Learning.pptx  3. Probability Distributions.pptx
EXCEL/: Basic_Consulting_Readiness.pptx  Excel_I.ipynb
Mental Models/: AB_testing.pptx  Software Systems.docx
week0 - Statistics/inferential/: 1_Inferential_statistics.ipynb  3_Hypothesis_testing.ipynb
week1 - EDA/1-numpy/: Numpy.ipynb
week1 - EDA/2-pandas/: Pandas_basics.ipynb
week1 - EDA/3-pandas-II/: Pandas_aggregations.ipynb
week2 - Databases/: Databases.pptx
(+47 files in other folders)
