[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "seaborn-qqplot>=0.5.0",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    "labs/ironkaggle-king-county",
]
